# ddd-architecture

./: .env.template  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/libs/: id.rs
domain/src/post/: entity.rs  repository.rs
domain/src/use_cases/: create_post.rs  create_user.rs  mod.rs
domain/src/user/: entity.rs  repository.rs
infrastructure/: Cargo.toml
infrastructure/migrations/: 20201202225410_init-db.sql  20201223191247_posts-table.sql
infrastructure/src/: lib.rs
infrastructure/src/libs/db/: service.rs
infrastructure/src/post/: db_repository.rs
infrastructure/src/user/: db_repository.rs
src/: component.rs  main.rs  provider.rs  provider_expanded.rs
src/clean_architecture/: mod.rs
src/clean_architecture/domain/: mod.rs
src/clean_architecture/domain/use_cases/: create_user.rs
src/clean_architecture/domain/user/: repository.rs  service.rs
src/domain/use_cases/: create_user.rs
src/domain/user/: model.rs  repository.rs  service.rs
src/infrastructure/user/: db_repository.rs  mod.rs  service.rs
web/: Cargo.toml
web/src/: main.rs
